--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,13 +1,31 @@
-FROM node:20-alpine
+FROM node:20-alpine as development
 
 WORKDIR /app
 
-COPY package*.json .
+COPY package*.json ./
 
 RUN npm install
 
-COPY . .
-
 EXPOSE 3000
 
-CMD [ "npm", "run", "dev" ]
+CMD ["npm", "run", "dev"]
+
+FROM node:20-alpine as production
+
+WORKDIR /app
+
+COPY package*.json ./
+
+RUN npm install --production
+
+COPY . .
+
+RUN npm run build
+
+FROM nginx:alpine as nginx
+
+COPY --from=production /app/build /usr/share/nginx/html
+
+EXPOSE 80
+
+CMD ["nginx", "-g", "daemon off;"]
