--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:20-alpine
+FROM node:20-alpine as development
 
 WORKDIR /app
 
@@ -8,8 +8,20 @@ RUN npm install
 
 RUN npm install -g nodemon
 
+EXPOSE 3001
+
+CMD ["npm", "run", "dev"]
+
+FROM node:20-alpine as production
+
+WORKDIR /app
+
+COPY package*.json ./
+
+RUN npm install --production
+
 COPY . .
 
 EXPOSE 3001
 
-CMD ["npm", "start"]
+CMD ["node", "index.js"]
