--- a/server/package.json
+++ b/server/package.json
@@ -1,1 +1,1 @@
-{"name":"aircraft-spotter-server","version":"1.0.0","scripts":{"test":"echo \"Error: no test specified\" && exit 1","start":"nodemon index.js"},"dependencies":{"body-parser":"^1.20.3","cors":"^2.8.5","dotenv":"^16.4.7","express":"^4.21.2","mysql2":"^3.12.0","nodemon":"^3.1.9"}}
+{"name":"aircraft-spotter-server","version":"1.0.0","scripts":{"test":"echo \"Error: no test specified\" && exit 1","start":"node index.js", "dev": "nodemon index.js"},"dependencies":{"body-parser":"^1.20.3","cors":"^2.8.5","dotenv":"^16.4.7","express":"^4.21.2","mysql2":"^3.12.0","nodemon":"^3.1.9"}}
