--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -12,7 +12,7 @@ CMD ["npm", "run", "dev"]
 
 FROM nginx:alpine as nginx
 
-COPY ./app-repo/client/build /usr/share/nginx/html
+COPY client/build /usr/share/nginx/html
 
 EXPOSE 80
 
